--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row ">
          
         <div class="col-lg-4 text-center">
-          <a href="????????">
+          <a href="">
           <i class="fa-solid fa-arrow-left fa-6x icon" ></i>          <h3>Go back </h3>
           <p>Return to Developer portfolio.</p>
         </div>
@@ -48,7 +48,7 @@
         </a> 
         </div> 
 
-        <div class="col-lg-4 text-center"> ,<a href="?????"><a href="index.html">
+        <div class="col-lg-4 text-center"> ,<a href="https://codejohana.github.io/dog/">
           <i class="fa-solid fa-arrow-left fa-rotate-180 fa-6x icon" ></i>
           <h3>TinDog</h3>
           <p>Check Website project it has mediaquery</p>
