--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row ">
          
         <div class="col-lg-4 text-center">
-          <a href="">
+          <a href="https://codejohana.github.io/home2024/">
           <i class="fa-solid fa-arrow-left fa-6x icon" ></i>          <h3>Go back </h3>
           <p>Return to Developer portfolio.</p>
         </div>
