--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
+
+  <!--bootstrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <!--font awesome-->
   <script src="https://kit.fontawesome.com/8e8d70b8b8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles.css">
@@ -42,7 +45,7 @@
         <div class="col-lg-4 text-center">
           <a href="https://codejohana.github.io/home2024/">
           <i class="fa-solid fa-arrow-left fa-6x icon" ></i>          <h3>Go back </h3>
-          <p>Return to Developer portfolio.</p>
+          <p>Return to Developer Portfolio.</p>
         </div>
         <div class="col-lg-4 text-center">
         </a> 
